<resources>
    <string name="app_name">Security</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="ingresar">INGRESAR</string>
    <string name="title_activity_admin">Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_monitoreo">Monitoreo</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="noUsers">Aún no hay usuarios</string>
    <string name="nuevoUsuario">Nuevo usuario</string>
    <string name="nombre">Nombre</string>
    <string name="aPaterno">Apellido Paterno</string>
    <string name="aMaterno">Apellido Materno</string>
    <string name="matricula">Matrícula</string>
    <string name="Telefono">Teléfono</string>
    <string name="Celular">Celular</string>
    <string name="Direccion">Dirección</string>
    <string name="seleccionRol">Selecciona el tipo de usuario</string>
    <string name="agregar">Agregar</string>
    <string name="Continuar">Continuar</string>
    <string name="contra">Contraseña</string>
    <string name="nombreResidente">Nombre del residente</string>
    <string name="propietario">Propietario</string>
    <string name="arrendatario">Arrendatario</string>

    <string-array name="roles">
        <item>Gerente</item>
        <item>Vigilante</item>
    </string-array>
    <string-array name="tipos">
        <item>Visitante</item>
        <item>Proveedor</item>
        <item>Peatón</item>
        <item>Servidumbre</item>
    </string-array>
    <string name="tab_text_1">Registrar visitante</string>
    <string name="tab_text_2">Ver registros</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="registro">Registro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Estas en el fragment 1</string>
    <string name="hello_blank_fragment2">Estas en el fragment 2</string>
    <string name="eliminarSeguro">¿Desea eliminar al usuario</string>
    <string name="eliminar">Eliminar usuario</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
</resources>
